# python-template

./: .gitignore  AGENTS.md  DEVELOPER_GUIDE.md  MCP_PR_TEST.md  README.md  pyproject.toml
.github/workflows/: ci.yml  copilot-setup-steps.yml
src/: __init__.py  index.py
src/tests/: __init__.py  test_index.py
